<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/guide_step_8_title"
                android:textStyle="bold"
                android:textColor="#333333"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/guide_step_8_tip"
                android:textColor="#868383"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/guide_step_8_tip_1"
                android:textColor="#333333"
                android:textSize="15sp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/ivDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/licard_quick_pay_guide_icon_huawei_logo"
                    android:scaleType="centerCrop"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/tvDeviceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ivDevice"
                    android:layout_marginLeft="15dp"
                    android:textStyle="bold"
                    android:text="@string/guide_step_8_tip_device"
                    android:textColor="#333333"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvDeviceName"
                    android:layout_alignLeft="@id/tvDeviceName"
                    android:layout_marginTop="10dp"
                    android:text="@string/guide_step_8_tip_devices"
                    android:textColor="#868383"
                    android:textSize="12sp"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>