<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/guide_step_0_tip_title"
                android:textStyle="bold"
                android:textColor="#484848"
                android:textSize="20sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/licard_quick_pay_guide_card_bg">

                <TextView
                    android:id="@+id/tvCardNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="2440 3217 4531 1904"
                    android:textStyle="bold"
                    android:textColor="#393939"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tvCopyCardNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvCardNumber"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:text="@string/guide_step_0_copy_card_number"
                    android:textColor="#75B9F1"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvLookAddCardProcess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/guide_step_0_look_add_card_process"
                android:textColor="#75B9F1"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/guide_step_0_tip"
                android:textColor="#817e7e"
                android:textSize="15sp"/>

        </LinearLayout>

    </RelativeLayout>

</layout>